<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="learning_leader">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_submission">Project Submission</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit_button_text">Submit</string>
    <string name="learning_hours">learning hours,</string>
    <string name="skill_iq_score">skill IQ Score,</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_is_clicked">Yes is clicked</string>
    <string name="successfil">Submission Successful</string>
    <string name="no">No</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submit_top">Submit</string>
    <string name="todo_activity">TODO</string>
    <string name="todo">TODO</string>
</resources>