<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@color/design_default_color_background">


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"

        android:clickable="true"
        android:contentDescription="@string/todo"
        android:onClick="cancel"
        android:src="@drawable/ic_action_name"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/are_you_sure"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_yes"
        android:layout_width="107dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/curve_shape"
        android:clickable="true"
        android:onClick="yes"
        android:text="@string/yes"
        android:textColor="#F4511E"
        android:textStyle="bold" />


</LinearLayout>


