<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_main"
        android:background="#101010">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/app_name"
                android:textSize="20sp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="#FBFAFA"
                />

            <Button
                android:layout_width="113dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="12dp"
                android:layout_toEndOf="@id/app_name"
                android:background="@drawable/curve_shape_top_button"
                android:onClick="submitProject"
                android:text="@string/submit_top"
                android:textAllCaps="false"
                android:textColor="#101010"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="406dp"
        android:layout_height="595dp"
        android:background="#FAF7F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="#101010"
            android:textAlignment="center"
            android:textColor="#FBFAFA"
            android:visibility="visible"
            app:tabIndicatorColor="@android:color/white"

            app:tabRippleColor="#FFFFFF"
            app:tabSelectedTextColor="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/learning_leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_leader"
                android:textColor="#FBFAFA" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/skill_iq_leader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="true"
                android:text="@string/skill_iq_leaders"
                android:textColor="#FBFAFA" />


        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>